# autokernel

./: .gitignore  AB_TESTING.md  ADOPTION.md  CLAUDE.md  KERNEL.md  KERNEL_PLUS_PLAN.md  PLAN.md  README.md  TODO.md  analysis.ipynb  kernel.py  prepare.py  program.md  pyproject.toml  reference.py  reference_layernorm.py  reference_relu.py  results.tsv  task.py  utils.py
.claude/: settings.json
.kernel-code/: history.txt  settings.yaml
.kernel-code/dev_logs/: cuda_contamination_client_audit_2026-04-23.md  cuda_fix_app_changes_2026-04-23.md  nvidia_deepseek_verification_2026-04-23.md  nvidia_kimi_verification_2026-04-23.md  nvidia_nim_wiring_review_2026-04-23.md  phase2_backcompat_review_2026-04-23.md  phase2_consistency_review_2026-04-23.md  phase2_parser_review_2026-04-23.md  phase2_surface_catalog_2026-04-23.md  phase3a_cost_delta_review_2026-04-23.md  phase3a_pipeline_correctness_review_2026-04-23.md  phase3a_prompt_quality_review_2026-04-23.md  profile_per_iter_decision_2026-04-24.md  reachability_audit_l1_8f6ddc2.md  run_2026-04-20_19-47-09.jsonl  run_2026-04-21_09-11-33.jsonl  run_2026-04-21_09-22-03.jsonl  run_2026-04-21_09-46-39.jsonl  run_2026-04-21_10-05-15.jsonl  (+4 more)
configs/: cuda_benchmark.yaml  glm_deep.yaml  groq_fast.yaml  groq_qwen.yaml  minimax_default.yaml
docs/: AUTOKERNEL.md  build-plan.md  claude-code-alignment.md  codebase-structure.md  data-and-integrations.md  five-layer-cake.md  gtm.md  kernel+_RSI.md  kernel-code-design.md  openkernel-design.md  pitch.md  plugin-example.py  research-synthesis.md  testing-guide.md  visualization-design.md
kernel_agent/: agent.py  manager.py  model_wrapper.py  opt_manager.py  opt_worker.py  platform_config.py  prompt_manager.py  pyproject.toml  worker.py
kernel_agent/ka_utils/providers/: __init__.py  available_models.py  models.py  nvidia_provider.py  ollama_provider.py  openai_base.py  openai_provider.py
kernel_agent/opt_worker_component/benchmarking/: benchmark.py
kernel_agent/opt_worker_component/orchestrator/: optimization_orchestrator.py
kernel_agent/opt_worker_component/prescribing/: bottleneck_analyzer.py
kernel_agent/opt_worker_component/profiling/: kernel_profiler.py
kernel_agent/platform/: __init__.py  noop.py  nvidia.py  registry.py
kernel_agent/templates/: kernel_optimization.j2  kernel_refinement.j2  reflexion_prompt.j2  triton_guidelines.j2
kernel_code/: __init__.py  advisor.py  agent_loop.py  ascii_charts.py  auto_optimizer.py  batch_optimizer.py  batch_plots.py  checkpoint.py  cli.py  compaction.py  context_viz.py  cost_dashboard.py  errors.py  evidence_tracker.py  file_cache.py  git_integration.py  goal_parser.py  goal_spec.py  gpu_functions.py  heatmap.py  hooks.py  iteration_formatter.py  ke_profile.py  kernel_config.py  kernel_profile.py  kernelbook.py  keybindings.py  live_display.py  markdown_renderer.py  messages.py  meta_reflect.py  mock_data.py  next_steps.py  onboarding.py  optimization_gate.py  optimization_log.py  output_styles.py  parallel.py  permissions.py  plugins.py  (+23 more)
kernel_code/benchmarks/: __init__.py  cost_frontier.py  export.py  fast_p_chart.py  hardware_comparison.py  problem_heatmap.py  scaling_curve.py  speedup_distribution.py
kernel_code/dashboard/: __init__.py  data.py  interactions.py  server.py  theme.py
kernel_code/dashboard/layouts/: __init__.py  code_diff.py  convergence.py  cost_efficiency.py  experiment_table.py  landscape.py  roofline.py  strategy_stats.py  strategy_tree.py  trajectory.py  utilization.py
kernel_code/integration/: __init__.py  kernel_agent_bridge.py  openkernel_bridge.py  opt_pipeline.py  trace_bridge.py
kernel_code/tools/: __init__.py  compare_kernels.py  edit_kernel.py  evaluate_kernel.py  explain_iteration.py  generate_kernel.py  profile_kernel.py  read_file.py  registry.py  search_skills.py  show_roofline.py  suggest_optimization.py  write_file.py
kernel_code/tui/: __init__.py  app.py  keybindings.py  theme.py
kernel_code/tui/panels/: __init__.py  experiment_log.py  optimization_feed.py  profiling.py  status_bar.py  trajectory.py
kernel_code/tui/widgets/: __init__.py  colored_table.py  gauge.py  sparkline.py
modal_infra/: app.py  deploy.py
openkernel/: __init__.py  cli.py  config.py  exceptions.py  pyproject.toml  sdk.py
openkernel/agents/: critic.py  generator.py  planner.py
openkernel/backends/: base.py  cuda_backend.py  triton_backend.py
openkernel/benchmarks/: __init__.py  gpumode_loader.py  kb_l1.py  kb_l2.py  leaderboard_reader.py  leaderboard_writer.py  problem_spec.py
openkernel/engine/: factory.py  inner_loop.py  orchestrator.py  strategy_evolution.py  world_model.py  world_model_prompts.py
openkernel/eval/: __init__.py  harness.py  profiler.py  types.py
openkernel/eval/profilers/: proton_profiler.py  roofline.py  torch_profiler.py
openkernel/hub/: __init__.py  client.py  datasets.py  kernels.py  models.py
openkernel/kernelbench/: __init__.py  compare.py  problems.py  scoring.py  sweep.py
openkernel/llm/: models.py  provider.py  structured.py
openkernel/memory/: __init__.py  skill_library.py  store.py  trajectory.py
openkernel/traces/: __init__.py  capture.py  export.py  storage.py  types.py
scripts/: check_regressions.py  emit_report.py  kb_l1_sweep.py  kb_smoke.py  measure_phase3a_tokens.py  publish_results.py  run_dry_run.py  run_sweep.py  score_suite.py  setup.sh  setup_problem.py  smoke_test_sol.py  test_infra.py  time_phases.py
tasks/: lessons.md  todo.md
tests/: mocks.py  test_check_regressions.py  test_critic_prompt.py  test_cuda_contamination.py  test_emit_report.py  test_evidence_tracker.py  test_goal_parser.py  test_goal_spec.py  test_kernel_profile_display.py  test_leaderboard_reader.py  test_leaderboard_writer.py  test_leaderboard_writer_integrity.py  test_live_table.py  test_nvidia_provider.py  test_phase3a_wiring.py  test_problem_spec.py  test_prompt_manager.py  test_prompt_templates.py  test_rate_limiter.py  test_ref_path_plumbing.py  test_run_suite.py  test_score_suite.py  test_shell.py  test_stopping_sol.py  test_summary_card.py  test_workload_spec.py
(+76 files in other folders)
