[project]
name = "openkernel-workspace"
version = "0.1.0"
description = "Autonomous GPU kernel optimization engine + developer tools"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["openkernel", "kernel_code"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
