[project]
name = "kernel-code"
version = "0.1.0"
description = "Terminal-native kernel optimization developer tool"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "openkernel",
    "textual>=1.0",
    "plotly>=6.0",
    "dash>=3.0",
    "rich>=13.0",
    "pyarrow>=15.0",
    "pygments>=2.18",
    "click>=8.0",
    "pandas>=2.0",
    "prompt-toolkit>=3.0",
]

[tool.uv.sources]
openkernel = { workspace = true }

[project.scripts]
kernel-code = "kernel_code.cli:main"
