[project]
name = "openkernel"
version = "0.1.0"
description = "Self-recursive GPU kernel optimization engine"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "kernelbench",
    "modal",
    "litellm",
    "pydantic>=2.0",
    "torch>=2.9",
    "triton",
    "huggingface-hub>=0.25",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "datasets>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
openkernel = "openkernel.cli:main"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
kernelbench = { git = "https://github.com/ScalingIntelligence/KernelBench.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
